@@ -4,7 +4,9 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed supplier mail to include the ordered shop items when multiple
+  email addresses are given.
+  [buchi]
 
 
 1.1.2 (2012-09-27)
